--- a/src/views/TabelaDePedidosEStatus.form
+++ b/src/views/TabelaDePedidosEStatus.form
@@ -70,7 +70,7 @@
                     <Column editable="false" title="Pre&#xe7;o" type="java.lang.Object"/>
                     <Column editable="false" title="Data" type="java.lang.Object"/>
                     <Column editable="false" title="Status" type="java.lang.String"/>
-                    <Column editable="false" title="Estabelecimento" type="java.lang.Object"/>
+                    <Column editable="false" title="Estabelecimento" type="java.lang.String"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
